tests/bad_reserved_name_import_alias.stderr
tests/bad_reserved_name_import_alias.sl:7:15: error: identifier prefix '__sl_' is reserved
