tests/bad_reserved_name_import_alias.sl
import __sl_bad "slang/feature/optional";
